syntax = "proto3";

option java_package = "com.haberdashervcs.common.protobuf";
option java_outer_classname = "ServerProto";
option java_multiple_files = false;


message BranchAndCommit {
    string branchName = 1;
    int64 commitId = 2;
}
