syntax = "proto3";

option java_package = "com.haberdashervcs.common.protobuf";
option java_outer_classname = "UsersProto";
option java_multiple_files = false;


message HdUser {
    string userId = 1;
    string email = 2;
    string org = 3;
    string password = 4;
}

message UserAuthToken {
    enum Type {
        WEB = 0;
        CLI = 1;
    }

    Type type = 1;
    string tokenId = 2;
    string userId = 3;
    string org = 4;
}
